ec2-instance.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: This is my Cloud Formation deployment q2
Parameters:
  ImageId:
    Type: String
    Description: This is a parameter to stop image id
    Default: ami-0562f774911c1d690
  InstanceType:
    Description: This is the list of allowd instance type parameters
    Type: String
    AllowedValues:
      - t2.micro
      - t2.nano
      - t2.small
      - t2.medium
  SSHLocation:
      Description: The IP address range that can be used to SSH to the EC2 instances
      Type: String
      MinLength: 9
      MaxLength: 18
      Default: 0.0.0.0/0
      AllowedPattern: (\d{1,3}).(\d{1,3}).(\d{1,3}).(\d{1,3})/(\d{1,2})
      ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Resources:
  Instance: 
    Type: "AWS::EC2::Instance"
    Properties: 
      ImageId: !Ref ImageId 
      InstanceType: !Ref InstanceType 
      SecurityGroupIds: 
      - Ref: ScuretiyGroups
      Tags: 
        - 
          Key: Name
          Value : Raghad Almutlaq-cloudformation
  ScuretiyGroups:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG 
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

Outputs:
  AvailabilityZones:
    Description: The Az 
    Value: !GetAtt Instance.AvailabilityZone
  PublicIpAddress:
    Value: !GetAtt Instance.PublicIp
    Description: This gives the public ip address
  PublicDns:
    Value: !GetAtt Instance.PublicDnsName
    Description: This gives the Dns name
